--- a/css/styles.css
+++ b/css/styles.css
@@ -314,9 +314,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.5rem;
-	border: 1px solid #6ec8f5;
+	border: 1px solid #ebdf00;
 	border-radius: 32px;
-	background-color: #6ec8f5;
+	background-color: #ebdf00;
 	color: #830b5e;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -326,9 +326,9 @@ input[type='checkbox'] {
 }
 
 .submit-button-tb:hover {
-	border: 1px solid #6ec8f5;
+	border: 1px solid #ebdf00;
 	background-color: transparent;
-	color: #6ec8f5;
+	color: #ebdf00;
 }
 
 
